// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePassword /> component renders correctly 1`] = `
ChangePassword {
  "$$": Object {
    "after_update": Array [],
    "before_update": Array [],
    "bound": Object {},
    "callbacks": Object {},
    "context": Map {},
    "ctx": Array [
      Flyin {
        "$$": Object {
          "after_update": Array [],
          "before_update": Array [],
          "bound": Object {},
          "callbacks": Object {},
          "context": Map {},
          "ctx": Array [
            false,
            undefined,
            undefined,
            [Function],
            [Function],
          ],
          "dirty": Array [
            -1,
          ],
          "fragment": Object {
            "c": [Function],
            "d": [Function],
            "i": [Function],
            "l": [Function],
            "m": [Function],
            "o": [Function],
            "p": [Function],
          },
          "not_equal": [Function],
          "on_destroy": Array [],
          "on_disconnect": Array [],
          "on_mount": Array [],
          "props": Object {
            "show": 4,
          },
          "root": <div>
            <section
              class="svelte-1ux9skm"
            >
              <h2
                class="svelte-1ux9skm"
              >
                Password
              </h2>
               
              <p>
                Be sure to use a safe password to limit access to your account. Your
    password should contain at least 8 characters, containing lower- and
    uppercase letters, numbers and signs.
              </p>
               
              <button
                class="svelte-1dsjpe6"
                data-type="secondary"
                type="button"
              >
                Change
              </button>
              
            </section>
             
            
          </div>,
          "skip_bound": false,
          "update": [Function],
        },
        "$capture_state": [Function],
        "$inject_state": [Function],
      },
      false,
      "",
      "",
      "",
      [Function],
      [Function],
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "dirty": Array [
      -1,
    ],
    "fragment": Object {
      "c": [Function],
      "d": [Function],
      "i": [Function],
      "l": [Function],
      "m": [Function],
      "o": [Function],
      "p": [Function],
    },
    "not_equal": [Function],
    "on_destroy": Array [
      [Function],
    ],
    "on_disconnect": Array [],
    "on_mount": Array [],
    "props": Object {},
    "root": <div>
      <section
        class="svelte-1ux9skm"
      >
        <h2
          class="svelte-1ux9skm"
        >
          Password
        </h2>
         
        <p>
          Be sure to use a safe password to limit access to your account. Your
    password should contain at least 8 characters, containing lower- and
    uppercase letters, numbers and signs.
        </p>
         
        <button
          class="svelte-1dsjpe6"
          data-type="secondary"
          type="button"
        >
          Change
        </button>
        
      </section>
       
      
    </div>,
    "skip_bound": false,
    "update": [Function],
  },
  "$capture_state": [Function],
  "$inject_state": [Function],
}
`;

exports[`<ChangePassword /> component renders edit mode correctly 1`] = `
ChangePassword {
  "$$": Object {
    "after_update": Array [],
    "before_update": Array [],
    "bound": Object {},
    "callbacks": Object {},
    "context": Map {},
    "ctx": Array [
      Flyin {
        "$$": Object {
          "after_update": Array [],
          "before_update": Array [],
          "bound": Object {},
          "callbacks": Object {},
          "context": Map {},
          "ctx": Array [
            false,
            undefined,
            undefined,
            [Function],
            [Function],
          ],
          "dirty": Array [
            -1,
          ],
          "fragment": Object {
            "c": [Function],
            "d": [Function],
            "i": [Function],
            "l": [Function],
            "m": [Function],
            "o": [Function],
            "p": [Function],
          },
          "not_equal": [Function],
          "on_destroy": Array [],
          "on_disconnect": Array [],
          "on_mount": Array [],
          "props": Object {
            "show": 4,
          },
          "root": <div>
            <section
              class="svelte-1ux9skm"
            >
              <h2
                class="svelte-1ux9skm"
              >
                Password
              </h2>
               
              <p>
                Be sure to use a safe password to limit access to your account. Your
    password should contain at least 8 characters, containing lower- and
    uppercase letters, numbers and signs.
              </p>
               
              <div
                class="input svelte-1ux9skm"
              >
                <div
                  class="container svelte-1ulq3bj"
                  data-required="true"
                  data-sr-only="false"
                >
                  <label
                    class="svelte-1ulq3bj"
                    for="password"
                  >
                    Password
                  </label>
                   
                  <input
                    class="svelte-1ulq3bj"
                    id="password"
                    required=""
                    type="password"
                  />
                   
                </div>
              </div>
               
              <div
                class="input svelte-1ux9skm"
              >
                <div
                  class="container svelte-1ulq3bj"
                  data-required="true"
                  data-sr-only="false"
                >
                  <label
                    class="svelte-1ulq3bj"
                    for="password"
                  >
                    Repeat Password
                  </label>
                   
                  <input
                    class="svelte-1ulq3bj"
                    id="password"
                    required=""
                    type="password"
                  />
                   
                </div>
              </div>
               
               
              <button
                class="svelte-1dsjpe6"
                data-type="secondary"
                type="button"
              >
                Cancel
              </button>
              
               
              <button
                class="svelte-1dsjpe6"
                data-type="primary"
                type="button"
              >
                Save new Password
              </button>
              
            </section>
             
            
          </div>,
          "skip_bound": false,
          "update": [Function],
        },
        "$capture_state": [Function],
        "$inject_state": [Function],
      },
      true,
      "",
      "",
      "",
      [Function],
      [Function],
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "dirty": Array [
      -1,
    ],
    "fragment": Object {
      "c": [Function],
      "d": [Function],
      "i": [Function],
      "l": [Function],
      "m": [Function],
      "o": [Function],
      "p": [Function],
    },
    "not_equal": [Function],
    "on_destroy": Array [
      [Function],
    ],
    "on_disconnect": Array [],
    "on_mount": Array [],
    "props": Object {},
    "root": <div>
      <section
        class="svelte-1ux9skm"
      >
        <h2
          class="svelte-1ux9skm"
        >
          Password
        </h2>
         
        <p>
          Be sure to use a safe password to limit access to your account. Your
    password should contain at least 8 characters, containing lower- and
    uppercase letters, numbers and signs.
        </p>
         
        <div
          class="input svelte-1ux9skm"
        >
          <div
            class="container svelte-1ulq3bj"
            data-required="true"
            data-sr-only="false"
          >
            <label
              class="svelte-1ulq3bj"
              for="password"
            >
              Password
            </label>
             
            <input
              class="svelte-1ulq3bj"
              id="password"
              required=""
              type="password"
            />
             
          </div>
        </div>
         
        <div
          class="input svelte-1ux9skm"
        >
          <div
            class="container svelte-1ulq3bj"
            data-required="true"
            data-sr-only="false"
          >
            <label
              class="svelte-1ulq3bj"
              for="password"
            >
              Repeat Password
            </label>
             
            <input
              class="svelte-1ulq3bj"
              id="password"
              required=""
              type="password"
            />
             
          </div>
        </div>
         
         
        <button
          class="svelte-1dsjpe6"
          data-type="secondary"
          type="button"
        >
          Cancel
        </button>
        
         
        <button
          class="svelte-1dsjpe6"
          data-type="primary"
          type="button"
        >
          Save new Password
        </button>
        
      </section>
       
      
    </div>,
    "skip_bound": false,
    "update": [Function],
  },
  "$capture_state": [Function],
  "$inject_state": [Function],
}
`;
